--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Ejercicios_Workout/14_Ejercicios_Series.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Ejercicios_Workout/14_Ejercicios_Series.ipynb
@@ -51,10 +51,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-2.2.3-cp313-cp313-macosx_10_13_x86_64.whl.metadata (89 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from pandas) (2.1.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/josecastanoperez/Library/Python/3.13/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Downloading tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/josecastanoperez/Library/Python/3.13/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Downloading pandas-2.2.3-cp313-cp313-macosx_10_13_x86_64.whl (12.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.5/12.5 MB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
+      "Downloading tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.3 pytz-2024.2 tzdata-2024.2\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -95,10 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mum     45\n",
+       "Dad     46\n",
+       "Jing    12\n",
+       "Jang    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edades = pd.Series([45,46,12,10],\n",
+    "                   index= [\"Mum\",\"Dad\",\"Jing\",\"Jang\"])\n",
+    "\n",
+    "edades"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +172,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prision Break       2008\n",
+       "Blacklist           2007\n",
+       "Peaky Blinders      2009\n",
+       "La casa de papel    2018\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_TV = pd.Series([2008,2007,2009,2018],\n",
+    "                      index= [\"Prision Break\", \"Blacklist\", \"Peaky Blinders\", \"La casa de papel\"])\n",
+    "series_TV"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "años_serie_antigua = 2024 - series_TV.min()\n",
+    "print(años_serie_antigua)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +244,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la serie más antigua es Blacklist  y se extrenó en el año 2007\n",
+      "la serie más nueva es La casa de papel  y se extrenó en el año 2018\n"
+     ]
+    }
+   ],
+   "source": [
+    "año_mas_antiguo= series_TV.min()\n",
+    "año_mas_nuevo= series_TV.max()\n",
+    "\n",
+    "serie_mas_antigua = series_TV.idxmin()\n",
+    "serie_mas_nueva= series_TV.idxmax()\n",
+    "\n",
+    "print( \"la serie más antigua es\", serie_mas_antigua,\" y se extrenó en el año\", año_mas_antiguo )\n",
+    "print(\"la serie más nueva es\", serie_mas_nueva,\" y se extrenó en el año\", año_mas_nuevo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,10 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018\n",
+      "2018\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(series_TV.iloc[3])\n",
+    "print(series_TV.loc[\"La casa de papel\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +316,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dad     46\n",
+      "Jing    12\n",
+      "Jang    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "sliced_edades = edades[[\"Dad\",\"Jing\",\"Jang\"]]\n",
+    "print(sliced_edades)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,22 +351,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "e1    Datascience\n",
+       "e2    Datascience\n",
+       "e3    Datascience\n",
+       "e4    Datascience\n",
+       "e4    Datascience\n",
+       "e5    Datascience\n",
+       "e6    Datascience\n",
+       "e7    Datascience\n",
+       "e8    Datascience\n",
+       "e9    Datascience\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Objeto= pd.Series([\"Datascience\", \"Datascience\",\"Datascience\",\"Datascience\",\"Datascience\",\"Datascience\",\"Datascience\",\"Datascience\",\"Datascience\",\"Datascience\"],\n",
+    "                  index = [\"e1\", \"e2\",\"e3\", \"e4\", \"e4\", \"e5\", \"e6\", \"e7\", \"e8\", \"e9\"])\n",
+    "\n",
+    "Objeto"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e1    Datascience\n",
+      "e2    Datascience\n",
+      "e3    Datascience\n",
+      "e4    Datascience\n",
+      "e4    Datascience\n",
+      "e5     The Bridge\n",
+      "e6    Datascience\n",
+      "e7    Datascience\n",
+      "e8       Bootcamp\n",
+      "e9    Datascience\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m1/3zzy2vk97kx6b7byp8m89thh0000gn/T/ipykernel_3261/170831459.py:1: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
+      "  Objeto[5]= \"The Bridge\"\n",
+      "/var/folders/m1/3zzy2vk97kx6b7byp8m89thh0000gn/T/ipykernel_3261/170831459.py:2: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
+      "  Objeto[8]= \"Bootcamp\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "Objeto[5]= \"The Bridge\"\n",
+    "Objeto[8]= \"Bootcamp\"\n",
+    "print(Objeto)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
