--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Ejercicios_Workout/15_Ejercicios_DataFrame.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Ejercicios_Workout/15_Ejercicios_DataFrame.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,10 +76,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "el padrino       19\n",
+       "love actually    16\n",
+       "forrest gump     15\n",
+       "gladiator        25\n",
+       "mollys game      22\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "peliculas = pd.Series ([19,16,15,25,22],\n",
+    "                       index = [\"el padrino\", \"love actually\", \"forrest gump\", \"gladiator\", \"mollys game\"])\n",
+    "peliculas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +119,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Griezmann           1 mundial\n",
+       "Varane            2 champions\n",
+       "Raul García            1 liga\n",
+       "Miranda        1 copa del rey\n",
+       "Harry kane      ningún titulo\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "futbolistas= pd.Series([\"1 mundial\", \"2 champions\", \"1 liga\", \"1 copa del rey\", \"ningún titulo\"],\n",
+    "                       index= [\"Griezmann\", \"Varane\", \"Raul García\", \"Miranda\", \"Harry kane\"])\n",
+    "futbolistas\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +160,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>escrito</th>\n",
+       "      <th>epoca</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>el padrino</th>\n",
+       "      <td>Jose</td>\n",
+       "      <td>1997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>el niño del pijama de rayas</th>\n",
+       "      <td>Pepe</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            escrito  epoca\n",
+       "el padrino                     Jose   1997\n",
+       "el niño del pijama de rayas    Pepe   2008"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "escrito_por = {\"el padrino\":\"Jose\", \"el niño del pijama de rayas\": \"Pepe\"}\n",
+    "escritor = pd.Series(escrito_por)\n",
+    "etapa= {\"el padrino\": 1997, \"el niño del pijama de rayas\": 2008}\n",
+    "año = pd.Series(etapa)\n",
+    "informacion_pelicula= {\"escrito\": escritor,\n",
+    "                       \"epoca\":año }\n",
+    "df_ejemplo = pd.DataFrame(informacion_pelicula)\n",
+    "df_ejemplo\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +242,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['escrito', 'epoca'], dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of                             escrito  epoca\n",
+       "el padrino                     Jose   1997\n",
+       "el niño del pijama de rayas    Pepe   2008>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.head "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +298,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "escrito    Jose\n",
+       "epoca      1997\n",
+       "Name: el padrino, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.loc[\"el padrino\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "escrito    Pepe\n",
+       "epoca      2008\n",
+       "Name: el niño del pijama de rayas, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.loc[\"el niño del pijama de rayas\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1 mundial'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "futbolistas[\"Griezmann\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +390,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          unidad_1  unidad_2\n",
+      "Sprint_1         4         2\n",
+      "Sprint_2         3         4\n",
+      "Sprint_3         5         3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = {\n",
+    "    'unidad_1': [4, 3, 5],  \n",
+    "    'unidad_2': [2, 4, 3]   \n",
+    "}\n",
+    "\n",
+    "\n",
+    "tiempos = pd.DataFrame(data, index=['Sprint_1', 'Sprint_2', 'Sprint_3'])\n",
+    "\n",
+    "\n",
+    "print(tiempos)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,7 +428,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
