--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
@@ -2006,7 +2006,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2020,7 +2020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
